--- a/views/insta.ejs
+++ b/views/insta.ejs
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
-    <style>
+    <link rel="stylesheet" href="/style.css" />
+    <!-- <style>
         img{
             height:100px;
             width:100px;
         }
-    </style>
+    </style> -->
 </head>
 <body>
    <h2>This page belong to @<%= data.name %></h2> 
